# ptap

./: .dockerignore  .ebignore  .env.sample  .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.py  application.py  cypress.config.js  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tmp_log.csv  vite.config.js
.ebextensions/: full.config  working.config
.github/workflows/: ci.yml
.platform/httpd/conf.d/: port5000.conf
api/: README.md  __init__.py  api.py  calculations.py  comparables.py  computils.py  constants.py  dataqueries.py  dto.py  email.py  json.py  logging.py  mainfct.py  make_db.ipynb  make_db.py  models.py  queries.py  submit.py  submitappeal.py  tasks.py  utils.py  wsgi.py
api/database/: make_db.py
api/scripts/: load_data.py  reload_submissions.py  render_all_letters.py  render_doc.py
api/template_files/: dentons_cook_template2.docx  detroit_loa_template_2021.docx  detroit_template.docx  detroit_template_2021.docx  detroit_template_2022.docx  detroit_template_2023.docx
api/templates/docs/: cook_template_2024.docx  dentons_cook_template.docx  detroit_representation_agreement_2025.docx  detroit_template_2022.docx  detroit_template_2023_alt.docx  detroit_template_2024.docx  detroit_template_2025.docx  milwaukee_template_2024.docx  milwaukee_template_2025.docx  representation_agreement.docx
api/templates/emails/: agreement_log.html  appeal_detroit.html  reminder_detroit.html  submission_cook.html  submission_detroit.html  submission_detroit_hope.html  submission_log.html  submission_milwaukee.html
api/test/: test_email.py  test_submitappeal.py
cook county/: autofiler.ipynb  autofiler.py
cook county/attachments/: comps.R  make_attachments.R
cook county/data/: construct_data.R  download data.ipynb
cook county/part1/: comps.R  download data.ipynb  run_code.R
cypress/e2e/: appeals.cy.js  compare.cy.js  detroit.cy.js  smoke.cy.js
cypress/fixtures/: contact.json  cook.json  detroit.json  detroit_property.json  milwaukee.json
cypress/plugins/: index.js
cypress/support/: e2e.js
detroit/: ad-hoc-foreclosures.Rmd  ad-hoc-foreclosures.html
detroit/data/: ad_hoc.Rmd  ad_hoc.html  construct_data.R
detroit/data/misc/: ad_hoc.Rmd  ad_hoc_rentalordinance.R  ad_hoc_rentalordinance.Rmd
frontend/: .eslintrc.json  README.md  package-lock.json  package.json
frontend/src/: index.css  index.jsx  requests.js
frontend/src/appeal/: appeal.jsx
frontend/src/estimator/: estimator.jsx
frontend/src/general/: header.jsx
frontend/src/landing/: detroit-landing-page.jsx  final-page.jsx  get-started.jsx  landing-page.jsx  select-region.jsx
frontend/src/reduced2023/: comparables.jsx  reduced2023.jsx
part1/: appeal_narrative.Rmd  comps.R  comps_report.Rmd  construct_data.R
ptap_site/: .eslintrc.json  README.md
ptap_site/api/: api.py  appeal_narrative.Rmd  comps_report.Rmd  computils.py  cook.py  cook_appeal_narrative.Rmd  cook_comps_report.Rmd  cook_sf.py  cook_template.docx  detroit.py  detroit_letter.Rmd  detroit_template.docx  mainfct.py  make_attachments_py.R  requirements.txt  wsgi.py
ptap_site/frontend/: README.md  package.json  requirements.txt
ptap_site/frontend/src/: index.jsx  requests.js
ptap_site/public/: index.html
ptap_site/src/: index.css  index.jsx
ptap_site/src/components/: characteristics.jsx  form-input.jsx
public/: index.html  manifest.json
src/: app.jsx  index.css  index.jsx  requests.js  utils.js
src/appeal/: appeal.jsx
src/appeal/pages/: comparables.jsx  contact-info.jsx  eligibility-requirements.jsx  review-appeal.jsx  review-property.jsx
src/appeal/shared/: property-info.jsx
src/components/: file-upload.jsx  header.jsx  pin-chooser.jsx  pin-lookup.jsx  pixel.jsx  property-info.jsx  target-property.jsx
src/context/: appeal.jsx
src/estimator/pages/: eligibility-requirements.jsx
src/general/: header.jsx
src/landing/: detroit-landing-page.jsx
src/layouts/: page-layout.jsx
src/pages/: appeal.jsx  detroit-lookup.jsx  final-page.jsx  not-found.jsx  reduced2023.jsx  resume.jsx  select-region.jsx
src/pages/content/: appeal-closed.jsx  appeal-intro.jsx  tool-intro.jsx
src/pages/steps/: agreement.jsx  damage.jsx  (+7 more)
src/reduced2023/: reduced2023.jsx
tf/: .terraform.lock.hcl  main.tf
tf/dev/: .terraform.lock.hcl  main.tf  variables.tf
tf/prod/: .terraform.lock.hcl  main.tf
(+36 files in other folders)
