[tool.poetry]
name = "ptap"
version = "0.1.0"
description = ""
authors = ["Eric Langowski"]
license = "BSD-3-Clause"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.3,<3.13.0"
flask = "^3.0.0"
flask-pydantic = "^0.12.0"
flask-cors = "^4.0.0"
flask-mail = "^0.9.1"
gspread = "^5.11.3"
jinja2 = "^3.1.3"
numpy = "^1.26.0"
pandas = "^2.1.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.22"
flask-sqlalchemy = "^3.1.1"
geoalchemy2 = "^0.14.1"
docxtpl = "^0.16.7"
pillow = "^10.1.0"
boto3 = "^1.28.73"
aws-wsgi = "^0.2.7"
awslambdaric = "^2.0.7"
sentry-sdk = {extras = ["flask"], version = "^2.8.0"}
pillow-heif = "^0.13.1"
pydantic = "^2.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.292"
pytest = "^8.0.0"

# Only used for loading data script
pyreadr = "^0.5.0"
geopandas = "^0.14.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
(
    \.git
    | \.venv
    | \.vscode
    | \.pytest_cache
    | __pycache__
    | build
    | coverage
    | dist
    | app/database
    | app/templates
    | src
    | tf
)
'''

[tool.ruff]
line-length = 88
select = [
    "E",
    "F",
    "W",
    "I"
]
exclude = [
    ".git",
    ".venv",
    ".pytest_cache",
    "app/database",
    "app/templates",
    "src",
    "tf"
]

[tool.ruff.isort]
known-first-party = ["api"]
