[tool.poetry]
name = "ptap"
version = "0.1.0"
description = ""
authors = ["Eric Langowski"]
license = "BSD-3-Clause"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.3,<3.13.0"
flask = "^3.0.0"
flask-pydantic = "^0.12.0"
flask-cors = "^5.0.0"
flask-mail = "^0.10.0"
jinja2 = "^3.1.3"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.22"
flask-sqlalchemy = "^3.1.1"
geoalchemy2 = "^0.16.0"
pydantic = "^2.9.0"
docxtpl = "^0.19.0"
pillow = "^11.0.0"
pillow-heif = "^0.21.0"
gspread = "^6.1.4"
boto3 = "^1.28.73"
aws-wsgi = "^0.2.7"
awslambdaric = "^3.0.0"
sentry-sdk = {extras = ["flask"], version = "^2.19.2"}
pytz = "^2024.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
pytest = "^8.0.0"
# Only used for loading data script
pyreadr = "^0.5.0"
pandas = "^2.2.3"
geopandas = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".venv",
    ".pytest_cache",
    "app/database",
    "app/templates",
    "src",
    "tf"
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I"
]

[tool.ruff.lint.isort]
known-first-party = ["api"]

[tool.ruff.format]
indent-style = "space"
