[project]
name = "ptap"
description = ""
license = "BSD-3-Clause"
version = "0.1.0"
readme = "README.md"
authors = [{ name = "Coalition for Property Tax Justice" }]
requires-python = '>=3.13.0,<3.14.0'
dependencies = [
    'flask (>=3.0.0,<4.0.0)',
    "flask-pydantic (>=0.14.0,<0.15.0)",
    "flask-cors (>=6.0.2,<7.0.0)",
    'flask-mail (>=0.10.0,<0.11.0)',
    'jinja2 (>=3.1.3,<4.0.0)',
    'psycopg2 (>=2.9.9,<3.0.0)',
    'sqlalchemy (>=2.0.22,<3.0.0)',
    'flask-sqlalchemy (>=3.1.1,<4.0.0)',
    "geoalchemy2 (>=0.18.1,<0.19.0)",
    'pydantic (>=2.9.0,<3.0.0)',
    "docxtpl (>=0.20.2,<0.21.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "pillow-heif (>=1.1.1,<2.0.0)",
    'gspread (>=6.1.4,<7.0.0)',
    'boto3 (>=1.28.73,<2.0.0)',
    'aws-wsgi (>=0.2.7,<0.3.0)',
    'awslambdaric (>=3.0.0,<4.0.0)',
    'sentry-sdk[flask] (>=2.19.2,<3.0.0)',
    "pytz (>=2025.2,<2026.0)",
]

[tool.poetry]
package-mode = false
requires-poetry = '>=2.0,<3.0'

[tool.poetry.dependencies]
requires-python = '>=3.13.0,<3.14.0'

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"
pytest = "^9.0.2"
# Only used for loading data script
pyreadr = "^0.5.0"
pandas = "^2.2.3"
geopandas = "^1.0.1"

[build-system]
requires = ['poetry-core (>=2.0,<3.0)']
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".venv",
    ".pytest_cache",
    "app/database",
    "app/templates",
    "src",
    "tf",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["api"]

[tool.ruff.format]
indent-style = "space"
